--- a/carousel.jade
+++ b/carousel.jade
@@ -1,27 +1,38 @@
 doctype html
-html
+html(lang="en")
  head 
   include includes/head
+  title Carousel of Forms
  body
-   //Do a form thing
-  div(id= "carousel-example-generic",class= "carousel slide", data-ride="carousel",pause=true, wrap=false)
+  //Carousel
+  div(id= "myCarousel",class= "carousel slide", data-ride="carousel")
+   //Indicators
    ol.carousel-indicators
-    each input, i in formObject
+    each field, i in fields
      if i == 0
-      li(data-target="#carousel-example-generic", data-slide-to=i,class="active")
+      li(data-target="#myCarousel", data-slide-to=i,class="active")
      else
-      li(data-target="#carousel-example-generic", data-slide-to=i)
-    
-   each input, i in formObject
-    div.carousel-inner
-     div.item.active
-      div.carousel-caption
-       input
+      li(data-target="#myCarousel", data-slide-to=i)
+   div.carousel-inner 
+    each field, i in fields
+     if(i == 0)
+      div.item.active
+       img(data-src="holder.js/480x800/auto/#777:#7a7a7a/text:First slide",alt="First Slide")
+       div.container
+        div.carousel-caption
+         h1=field.name
+     else
+      div.item
+       img(data-src="holder.js/480x800/auto/#777:#7a7a7a/text:Slide #" +i, alt="Slide #" +i)
+       div.container
+        div.carousel-caption
+         h1=field.name
      //Controls
-    a(class="left carousel-control", href="#carousel-example-generic",data-slide="prev")
-     span.glyphicon.glyphicon-chevron-left
-    a(class="right carousel-control",href="#carousel-example-generic",data-slide="next")
-     span.glyphicon.glyphicon-chevron-right
+   a(class="left carousel-control", href="#myCarousel",data-slide="prev")
+    span.glyphicon.glyphicon-chevron-left
+   a(class="right carousel-control",href="#myCarousel",data-slide="next")
+    span.glyphicon.glyphicon-chevron-right
+  include includes/footer
  //
   table.table
    tr 
