Added stubs for stats

--- a/carousel.jade
+++ b/carousel.jade
@@ -5,6 +5,8 @@ html(lang="en")
   title Carousel of Forms
  body
   //Carousel
+  nav
+   a(href="http://ecu.edu",class= "h2") things
   form(method="get")
    div(id= "myCarousel",class= "carousel slide", data-ride="carousel",data-interval=0)
     //Indicators
