Non-Working commit! in the middle of stuff

--- a/carousel.jade
+++ b/carousel.jade
@@ -1,4 +1,5 @@
 doctype html
+//vars == Holder.holes: int, Holder.fields: form object
 html(lang="en")
  head 
   include includes/head
@@ -11,43 +12,45 @@ html(lang="en")
    div(id= "myCarousel",class= "carousel slide", data-ride="carousel",data-interval=0)
     //Indicators
     ol.carousel-indicators
-     each field, i in fields
-      if i == "player"
+     each hole, i in Holder.holes
+      if i == 0
        li(data-target="#myCarousel", data-slide-to=i,class="active")
       else
        li(data-target="#myCarousel", data-slide-to=i)
     div.carousel-inner 
-     each field, i in fields
-      if(i == "player")
-       div.item.active
+     each hole, i in Holder.holes             
+      if i == 0
+       div.item.active 
         img(data-src="holder.js/480x800/auto/#777:#7a7a7a/text:"+ i,alt="First Slide")
         div.container
-         div.carousel-caption          
-          if(field.required)
-           div.field.required
-            label(for="id_"+i)
-             h1=field.name
-            input(type=field.widget.type,name=field.name,id="id_" + i)
-          else
-           div.field
-            label(for="id_"+i)
-             h1=field.name
-            input(type=field.widget.type,name=field.name,id="id_" + i)
+         each field, j in Holder.fields
+          div.carousel-caption          
+           if(field.required)  
+            div.field.required
+             label(for="id_"+i+"_"+j)
+              h1=field.name
+             //input(type=field.widget.type,name=field.name,id="id_" + i+"_"+j)
+           else
+            div.field
+             label(for="id_"+i+"_"+j)
+              h1=field.name
+             //input(type=field.widget.type,name=field.name,id="id_" + i+"_"+j)
       else
        div.item
         img(data-src="holder.js/480x800/auto/#777:#7a7a7a/text:" +i, alt=i)
         div.container
-         div.carousel-caption
-          if(field.required)
-           div.field.required
-            label(for="id_"+i)
-             h1=field.name
-            input(type=field.widget.type,name=field.name,id="id_" + i)
-          else
-           div.field
-            label(for="id_"+i)
-             h1=field.name
-            input(type=field.widget.type,name=field.name,id="id_" + i)  
+         each field, j in Holder.fields
+          div.carousel-caption
+           if(field.required)
+            div.field.required
+             label(for="id_"+i + "_" + j)
+              h1=field.name
+             //input(type=field.widget.type,name=field.name,id="id_" + i+ "_" + j)
+           else
+            div.field
+             label(for="id_"+i + "_" +j)
+              h1=field.name
+             //input(type=field.widget.type,name=field.name,id="id_" + i+ "_" + j)  
    //Controls
    a(class="left carousel-control", href="#myCarousel",data-slide="prev")
     span.glyphicon.glyphicon-chevron-left
