--- a/carousel.jade
+++ b/carousel.jade
@@ -29,12 +29,12 @@ html(lang="en")
             div.field.required
              label(for="id_"+i+"_"+j)
               h1=field.name
-             //input(type=field.widget.type,name=field.name,id="id_" + i+"_"+j)
+             input(type=field.widget.type,name=field.name,id="id_" + i+"_"+j)
            else
             div.field
              label(for="id_"+i+"_"+j)
               h1=field.name
-             //input(type=field.widget.type,name=field.name,id="id_" + i+"_"+j)
+             input(type=field.widget.type,name=field.name,id="id_" + i+"_"+j)
       else
        div.item
         img(data-src="holder.js/480x800/auto/#777:#7a7a7a/text:" +i, alt=i)
@@ -45,12 +45,12 @@ html(lang="en")
             div.field.required
              label(for="id_"+i + "_" + j)
               h1=field.name
-             //input(type=field.widget.type,name=field.name,id="id_" + i+ "_" + j)
+             input(type=field.widget.type,name=field.name,id="id_" + i+ "_" + j)
            else
             div.field
              label(for="id_"+i + "_" +j)
               h1=field.name
-             //input(type=field.widget.type,name=field.name,id="id_" + i+ "_" + j)  
+             input(type=field.widget.type,name=field.name,id="id_" + i+ "_" + j)  
    //Controls
    a(class="left carousel-control", href="#myCarousel",data-slide="prev")
     span.glyphicon.glyphicon-chevron-left
