--- a/includes/footer.jade
+++ b/includes/footer.jade
@@ -1,3 +1,3 @@
 script(language="JavaScript" src="http://code.jquery.com/jquery-2.1.0.js")
 script(language="JavaScript" src="bootstrap.js")
-script(language="JavaScript" src="docs.js")
+script(language="JavaScript" src="docs.min.js")
