removed the dumb indicator

--- a/vCarousel.jade
+++ b/vCarousel.jade
@@ -12,7 +12,7 @@ html(lang="en")
     //form(method="get")
    div(id= "myCarousel",class= "carousel slide", data-ride="carousel",data-interval=0)
     //Indicators
-    ol.carousel-indicators
+    //ol.carousel-indicators
      each hole, i in Holder.holes
       if i == 0
        li(data-target="#myCarousel", data-slide-to=i,class="active")
