--- a/includes/holeInclude.jade
+++ b/includes/holeInclude.jade
@@ -1,4 +1,4 @@
-table(border="5", width="100%", cellpadding="4", cellspacing="3")
+table(border="5", height="100%",width="auto", cellpadding="4", cellspacing="3")
   tr
    th 
   tr
