--- a/vCarousel.jade
+++ b/vCarousel.jade
@@ -30,19 +30,19 @@ html(lang="en")
       if(i == 0)
        div.item.active
         img(data-src="holder.js/480x800/auto/#777:#7a7a7a/text:"+ i,alt="First Slide")
-        div.container
+        div.container-fluid
          div.carousel-caption
           include includes/holeInclude
       else if i == 17
        div.item
         img(data-src="holder.js/480x800/auto/#777:#7a7a7a/text:" +i, alt=i)
-        div.container
+        div.container-fluid
          div.carousel-caption
           include includes/holeInclude
       else
        div.item
         img(data-src="holder.js/480x800/auto/#777:#7a7a7a/text:" +i, alt=i)
-        div.container
+        div.container-fluid
          div.carousel-caption
           include includes/holeInclude 
    //Controls
