made the form pretty as pretty can be.

--- a/vCarousel.jade
+++ b/vCarousel.jade
@@ -12,6 +12,9 @@ html(lang="en")
     color:black;
     width:50px;
     }
+    div[class="container-fluid"] {
+    padding-left: 0px;
+    }  
  body
   //Carousel
   //nav
