Courses work now

--- a/views/banner.jade
+++ b/views/banner.jade
@@ -1,6 +1,6 @@
 head
- script(src='jQuery.js')
-  body
+  script(src='jQuery.js')
+body(background='PirateGolfPics/NewPirateGolfBanner.jpg', link='#ffffff', vlink='#ffffff', alink='#ffffff')
     center
       br
       br
