--- a/views/users/fields.jade
+++ b/views/users/fields.jade
@@ -1,8 +1,25 @@
 div
-  label Email:
-  input(name='user[email]', value=user.email || '')
-
+  label First Name:
+  input(name='user[first_name]', value=user.first_name || '')
+div
+  label Last Name:
+  input(name='user[last_name]', value=user.last_name || '')
+div
+  label Display Name:
+  input(name='user[displayname]', value=user.displayname || '')
+div
+  label User Name:
+  input(name='user[username]', value=user.username || '')
+div
+  label User Type:
+  input(name='user[usertype]', value=user.usertype || '')
+div
+  label Phone:
+  input(name='user[phone]', value=user.phone || '')
 div
   label Password:
   input(name='user[password]', value=user.password || '', type='password')
+div
+  label Email:
+  input(name='user[email]', value=user.email || '')
 
