--- a/views/courseList.jade
+++ b/views/courseList.jade
@@ -1,3 +1,4 @@
 ul
   each course in courses
-   li=course.course_name
+   a(href='/course/' + course.id, target="sub-main")
+    li=course.course_name
